--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href=".resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
 
   <body>
     <!-- "Section 1" -->
-    <h1>Discover hidden places around the world around you</h1>
+    <h1>Discover hidden places in the world around you</h1>
         <p><a class="comingsoon" href="#">Download Excursion (Coming soon!)</a></p>
         <video autoplay muted loop>
-          <source src="resources/videos/excursion.mp4" type="video/mp4">
+          <source src="resources\videos\excursion.mp4" type="video/mp4">
         </video>
 
     <!-- "Section 2" -->
     <h2>Your personal travel guide</h2>
       <p>Excursion remebers places you like, and recommends new points of
       interest around you.</p>
-      <img src="resources/images.camp.jpg" />
+      <p><img src="resources\images\camp.jpg" alt></p>
 
     <!-- "Section 3" -->
-      <img src="resources/images.phone.png" />
+      <p><img src="resources\images\phone.png" alt></p>
       <h2>Coming Soon for iPhone and Android</h2>
       <p><a class="comingsoon" href="#">Download Excursion (Coming soon!)</a></p>
 
